# llscm

./: .travis.yml  LICENSE  README.md
compiler/: llscm-compiler.cabal
compiler/app/: Main.hs
compiler/src/LLSCM/: Lexer.hs  Parser.hs
compiler/test/LLSCM/: LexerSpec.hs
