name:                llscm-compiler
version:             0.1.0.0
synopsis:            Scheme to LLVM compiler
description:         Please see README.md
homepage:            http://github.com/michalmuskala/llscm
license:             Apache-2.0
license-file:        ../LICENSE
author:              Michał Muskała
maintainer:          michal@muskala.eu
copyright:           Copyright: (c) 2016 Michał Muskała
category:            Compiler, Language
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  hs-source-dirs:      src
  exposed-modules:     LLSCM.Lexer
                     , LLSCM.Parser
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude >= 0.12 && < 0.13
                     , megaparsec >= 4.3 && < 4.4
                     , text >= 1.2 && < 1.3

executable llscm-compiler
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , classy-prelude
                     , llscm-compiler

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , llscm-compiler
                     , hspec-megaparsec
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/michalmuskala/llscm
